# tremor

./: CMakeLists.txt
cmake/: TremorConfig.cmake.in
win32/: vorbisidec.def
